# Django

./: .gitignore  pyproject.toml
Blog/: pyproject.toml
Blog/blog/: admin.py  forms.py  models.py  views.py
Blog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py
Blog/config/: settings.py  urls.py
Blog/member/: views.py
Blog/templates/: base.html  blog_detail.html  blog_list.html
Blog/templates/registration/: login.html  signup.html
bookmark/bookmark/: admin.py  models.py  views.py
bookmark/bookmark/migrations/: 0001_initial.py
bookmark/config/: settings.py  urls.py
bookmark/templates/: bookmark_detail.html  bookmark_list.html
